# ai-trading-agents

./: .gitignore  README.md  README.zh-CN.md  docker-compose-dev.yml  pyproject.toml
.claude/: settings.local.json
backend/: pyproject.toml
backend/cli/: main.py
backend/examples/: main.py
backend/tests/: test.py
backend/tradingagents/agents/: __init__.py
backend/tradingagents/dataflows/: adaptive_cache.py  integrated_cache.py  interface.py  stock_api.py
backend/tradingagents/graph/: __init__.py  setup.py  trading_graph.py
backend/tradingagents/llm_adapters/: dashscope_adapter.py
cli/: main.py
